Hacks to make github lfs video work

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<body>
 	
 		<video autoplay loop id="bgVideo">
-			<source id="bgVideoSrc" src="video/bg_intro.mp4" type="video/mp4">
+			<source id="bgVideoSrc" src="https://github.com/DJYar/stlk-monologue/blob/master/video/bg_intro.mp4?raw=true" type="video/mp4">
 		</video>
 		
 		<audio autoplay loop id="bgAudio">
@@ -150,7 +150,7 @@
 							Мы с тобой ненавязчиво подошли к разговору о том, что же именно происходит в черепной коробке каждого игрока, как на это влиять при помощи уже упомянутых эскизов или полноценно сформированных составляющих игры и к чему это всё приведет. Запомни этот момент, а я пока что продолжу тираду о билдах. 
 						</p>
 						<br>
-						<div class="compare"><div id="compare">
+						<div class="compare"><div id="compare" style="height: 100% !important;">
 							<img src="img/compare/1a.png">
 							<img src="img/compare/1b.png">
 						</div></div>
