--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
 						</p>
 						<br>
 						<p class="articleText">
-							Из-за больших локаций ЗП особо нуждается в механике фаст-тревела, которая была введена в ЧН. Быстрые переходы позволяют скрыть от глаз игрока неравномерность населённости локаций, а также ускорить скучное передвижение между ключевыми точками.<br>При этом симуляция отрядов в ЗП работает логично, правильно и всегда, чего нельзя сказать о ЧН, в котором война группировок создаёт отряды, которые прибегают к тебе за три-девять земель. А по истечении всех военных действий движение отрядов в игровом мире вовсе прекращается.
+							Из-за больших локаций ЗП особо нуждается в механике фаст-тревела, которая была введена в ЧН. Быстрые переходы позволяют скрыть от глаз игрока неравномерность населённости локаций, а также ускорить скучное передвижение между ключевыми точками.<br>При этом симуляция отрядов в ЗП работает логично, правильно и всегда, чего нельзя сказать о ЧН, в котором война группировок создаёт отряды, которые прибегают к тебе за три-девять земель. А по истечении всех военных действий движение отрядов в игровом мире вовсе прекращается.<br>
 							<img src='img/parts/factions.jpg' style='margin-right: 25px; width: 100%'>
 							ТЧ возрождает отряды на левел-чейнджерах и это иногда выглядит топорно, хотя сталкеры-одиночки, которые бродят по Кордону, мне понравились: в них есть дух сталкерства, а не некого группового бандитизма, который появился позже.
 						</p>
