--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 						<div class="bottom_notice"></div>
 						</div>
 						<p class="articleText">
-							Именно так. Хоть отчаянности и опасности там всё ещё довольно много, но ржавой арматуры на полу поубавилось, население Зоны стало плотнее, разнообразие монстров снизилось и, по правде говоря, это не такой уж и негативный момент, ведь уменьшился фактор страха, который мог препятствовать желанию исследовать игровой мира. Я бы ни за что не пошёл на метку на карте без нужной экипировки и запаса патронов, если бы у меня были подозрения, что там сидит какая-то ебака и ждёт, когда к ней в лапы угодит очередной исследователь. При этом лояльный игровой баланс ТЧ позволяет почти без дискомфорта пройти игру вообще без какой-либо вменяемой экипировки.
+							Именно так. Хоть отчаянности и опасности там всё ещё довольно много, но ржавой арматуры на полу поубавилось, население Зоны стало плотнее, разнообразие монстров снизилось и, по правде говоря, это не такой уж и негативный момент, ведь уменьшился фактор страха, который мог препятствовать желанию исследовать игровой мир. Я бы ни за что не пошёл на метку на карте без нужной экипировки и запаса патронов, если бы у меня были подозрения, что там сидит какая-то ебака и ждёт, когда к ней в лапы угодит очередной исследователь. При этом лояльный игровой баланс ТЧ позволяет почти без дискомфорта пройти игру вообще без какой-либо вменяемой экипировки.
 						</p><hr>
 						<p class="articleText">
 							<span class="greenSpan">Чистое Небо</span> радикально окрашивает все уровни в <span class="tip" tip="
