--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 		<title>:: S.T.A.L.K.E.R. ::</title>
 	
-		<meta name="description" content="Work in progress">
+		<meta name="description" content="Classic S.T.A.L.K.E.R. game series review (biased!)">
 		<meta name="author" content="Schtainhardt">
 
 		<link rel="stylesheet" href="css/styles.css">
@@ -324,7 +324,7 @@
 							Среди этих декораций, конечно, есть и то, что увидеть в реальной жизни мы никак не можем. Мутанты, аномалии, артефакты — это уже составляющие мира, которые являются составными частями геймплея.
 						</p>
 						<p class="articleText">
-							 И если на минутку задуматься о том, как они расположены, то можно заметить забавный факт: с каждым аддоном аномалии всё больше начинают «прятаться» от игрока, монстры перестают мешать что-либо делать, а «разблокируемые» слоты под артефакты в ЧН и ЗП «притормаживают» прокачку игрока. Но есть проблема. И кроется она в том, что баланс ЧН не подготовлен к новым реалиям. В Тени Чернобыли мы имеем разнообразные характеристики артефактов (о, да! -233% кровотечения), которые имеют плюсы и минусы. А последующих частях всё превратилось в единственный математический квест по снятию радиации взамен на какие-то приемущества. Максимум слотов всё тот же: их пять. Но «кубиков»-артефактов при этом необходимо использовать больше, чем требовалось в ТЧ для достижения аналогичного эффекта.
+							 И если на минутку задуматься о том, как они расположены, то можно заметить забавный факт: с каждым аддоном аномалии всё больше начинают «прятаться» от игрока, монстры перестают мешать что-либо делать, а «разблокируемые» слоты под артефакты в ЧН и ЗП «притормаживают» прокачку игрока. Но есть проблема. И кроется она в том, что баланс ЧН не подготовлен к новым реалиям. В Тени Чернобыля мы имеем разнообразные характеристики артефактов (о, да! -233% кровотечения), которые имеют плюсы и минусы. А последующих частях всё превратилось в единственный математический квест по снятию радиации взамен на какие-то приемущества. Максимум слотов всё тот же: их пять. Но «кубиков»-артефактов при этом необходимо использовать больше, чем требовалось в ТЧ для достижения аналогичного эффекта.
 						</p>
 						<br>
 						<p class="articleText">
