--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
 							<center>
 						</p>
 						<br>
-
+						<div class="giscus"></div>
 					</div>
 				</div>				
 				<div id="dialog_bottom"></div>
@@ -562,6 +562,22 @@
 		
 		<script>window.current_theme = 'bg_intro';</script>
 		<script src="js/main.js"></script>
+		<script src="https://giscus.app/client.js"
+	        data-repo="DJYar/stlk-monologue"
+	        data-repo-id="R_kgDOHCA_hw"
+	        data-category="General"
+	        data-category-id="DIC_kwDOHCA_h84COLof"
+	        data-mapping="specific"
+	        data-term="Основная ветка"
+	        data-reactions-enabled="1"
+	        data-emit-metadata="0"
+	        data-input-position="top"
+	        data-theme="dark_dimmed"
+	        data-lang="ru"
+	        data-loading="lazy"
+	        crossorigin="anonymous"
+	        async>
+		</script>
 	</body>
 	
 </html>
