--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
 	        data-reactions-enabled="1"
 	        data-emit-metadata="0"
 	        data-input-position="top"
-	        data-theme="dark_dimmed"
+	        data-theme="css/giscus_xray.css"
 	        data-lang="ru"
 	        data-loading="lazy"
 	        crossorigin="anonymous"
